{
    "name": "GameInput",
    "maps": [
        {
            "name": "Player",
            "id": "25898b69-1efb-4ea8-bbd0-b7c9c17e0e35",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "754d7e85-fc9f-4101-b5d8-2e56c2468559",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Run",
                    "type": "Button",
                    "id": "0eb36a2b-9abe-40d4-8a47-981702087d6f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MainWeapon",
                    "type": "Button",
                    "id": "4929c574-bf05-4329-a22f-dad9aa9e453b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RollorDodge",
                    "type": "Button",
                    "id": "8b5f9897-ca1c-49a1-8a24-8897f664fdb9",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LookTarget",
                    "type": "Button",
                    "id": "bb4366af-5995-4cca-a604-b79ff1fcc55a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "31b80eba-ab3d-4b91-b3be-ebcd9d431237",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OppenInventory",
                    "type": "Button",
                    "id": "411c8999-f03f-4853-b8da-ac64f6d202f6",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "8d4366cc-f3ca-49ba-9fb2-fc4d9481fdfc",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Food1",
                    "type": "Button",
                    "id": "fb3e996d-34ae-4d9a-94ac-2e6fe2dc2201",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Food2",
                    "type": "Button",
                    "id": "2ff65824-bd88-463b-81eb-6e8ae3a3598d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Drug1",
                    "type": "Button",
                    "id": "4e8e84bc-2641-443c-b238-1690421a167a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Drug2",
                    "type": "Button",
                    "id": "c1cc7fda-d70c-43c0-a00c-8f23a7224a87",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Interaction",
                    "type": "Button",
                    "id": "f75587a2-62e2-4bc9-9312-fea405bbec42",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "36fdad33-31fe-4337-8e0f-e21abfa8a93e",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "left",
                    "id": "08ccda0c-8143-4763-bc70-e7f359568195",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "ab3d88ac-812c-41c8-b59f-2cc9919a02b4",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "5d072c48-a128-4689-9bee-462fa17addf1",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a1b3246f-5cb1-4156-9ae3-1eb23fa36e1d",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MainWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b56bb88d-7d38-43d6-89c2-4e72ed991173",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RollorDodge",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "24a28949-3100-43a9-b5cd-08ee7d0b9fcf",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LookTarget",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f14fa79c-f7ce-4ee4-b382-36c6544afb59",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d3377951-9705-42b2-8403-10e41d0f5b6c",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OppenInventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a2b16d4d-6fcd-4eb4-bbf9-20a50222aacc",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3cd901f4-977c-4c73-8678-0f5e382a8d80",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Food1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b5c41e59-add6-45e2-849d-4ced8578f05b",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Food2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "384c2ea0-c047-46c3-a679-e572e2ed5f72",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Drug1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ef417ced-480b-437e-92e7-3d545f9e61cb",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Drug2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "faf69147-0b72-40f5-ac72-a247ccea9796",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interaction",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "72193811-d19d-4851-9065-2a2185c0b131",
            "actions": [
                {
                    "name": "Cancel",
                    "type": "Button",
                    "id": "5bb96db9-e041-4330-9fe8-c516d0e6752b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CloseInventory",
                    "type": "Button",
                    "id": "3eb09b45-62aa-4add-b340-ce04d390d859",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4689b70b-e178-4c5b-a17a-37aa9fde8395",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cancel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "88439afe-94a4-43d3-8a3d-08f0c1d8b5c6",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CloseInventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}